fixed currentPage for AppSettings; changed scrollbar style

--- a/src/components/Layouts/MainPageLayout/MainPageLayout.module.scss
+++ b/src/components/Layouts/MainPageLayout/MainPageLayout.module.scss
@@ -5,3 +5,8 @@
   display: flex;
   flex-direction: column;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
